# rules_itest

./: .bazelrc  MODULE.bazel  README.md  go.mod  go.sum  itest.bzl
.bcr/: metadata.template.json
cmd/svcinit/: main.go
docs/: itest.md
examples/: MODULE.bazel  go.mod
private/: itest.bzl
runner/: runner.go  service_instance.go
svcctl/: svcctl.go
svclib/: ports.go  types.go
tests/: BUILD.bazel  MODULE.bazel  go.mod
tests/deferred/: start_deferred_service_test.go
tests/ports/: BUILD.bazel  ports_test.go  tests.bzl
tests/process_state_race/: BUILD.bazel  process_state_race_test.go
tests/so_reuseport/: so_reuseport_test.go  so_reuseport_test.mjs
tests/startup_failure/: BUILD.bazel  cleanup_failure_test.bzl  cleanup_on_sigterm.sh
tests/svcctl/: BUILD.bazel  client.go
